# Gecco

./: .gitignore  CMakeLists.txt  README.md  mathlib.gec  test.gec  test_import.gec
compiler/: chunk.c  chunk.h  common.c  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
compiler/chunk/: chunk.c  chunk.h
compiler/command/: command_defs.c  command_defs.h  command_handler.c  command_handler.h  version.c
compiler/compiler/: compiler.c  compiler.h
compiler/debug/: debug.c  debug.h
compiler/err/: status.c  status.h
compiler/formatting/: ansi_colors.h
compiler/geccovm/: vm.c  vm.h
compiler/memory/: memory.c  memory.h
compiler/repl/: repl.c  repl.h
compiler/version/: version.h
standard/math/: math.gec
